--- a/src/main/resources/static/lab_data_forms/1011.html
+++ b/src/main/resources/static/lab_data_forms/1011.html
@@ -8,7 +8,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1011-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1011_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1011_1" data-lab-kind="1">
         <table class="table table-sm" id="table1011_1_Lhb">
             <thead>
             <tr>
@@ -104,7 +104,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1011_2">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1011_2" data-lab-kind="2">
         <table class="table table-sm" id="table1011_2_msize">
             <thead>
             <tr>
