--- a/src/main/resources/static/lab_data_forms/1021.html
+++ b/src/main/resources/static/lab_data_forms/1021.html
@@ -12,7 +12,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1021-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1021_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1021_1" data-lab-kind="1">
         <table class="table table-sm" id="table1021_1_mt">
             <thead>
             <tr>
@@ -167,7 +167,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1021_2">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1021_2" data-lab-kind="2">
         <table class="table table-sm" id="table1021_2_mvt">
             <thead>
             <tr>
