--- a/src/main/resources/static/lab_data_forms/1031.html
+++ b/src/main/resources/static/lab_data_forms/1031.html
@@ -8,7 +8,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1031-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1031_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1031_1" data-lab-kind="1">
         <table class="table table-sm" id="table1031_chy">
             <thead>
             <tr>
