--- a/src/main/resources/static/lab_data_forms/1071.html
+++ b/src/main/resources/static/lab_data_forms/1071.html
@@ -7,7 +7,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1071-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1071_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1071_1" data-lab-kind="1">
         <table class="table table-sm" id="table1071_fanshefa">
             <caption class="well">	θ=((α2-α1)+(β2-β1))/2,θ值应为120左右,角度输入形式为x.y，表示x度y分,其中x为度数，y为分数</caption>
             <thead>
@@ -58,7 +58,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1071_2">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1071_2" data-lab-kind="2">
         <table class="table table-sm" id="table1071_zuixiaopianxiang">
             <caption class="well">δmin=((α2-α1)+(β2-β1))/2,δmin值应为51左右,角度输入形式为x.y，表示x度y分,x为度数，y为分数</caption>
             <thead>
