--- a/src/main/resources/static/lab_data_forms/1081.html
+++ b/src/main/resources/static/lab_data_forms/1081.html
@@ -7,7 +7,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1081-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1081_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1081_1" data-lab-kind="1">
         <table class="table table-sm" id="table1081_jiguangshuangleng1">
             <thead>
             <tr>
