--- a/src/main/resources/static/lab_data_forms/1061.html
+++ b/src/main/resources/static/lab_data_forms/1061.html
@@ -10,7 +10,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1061-1 ">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1061_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1061_1" data-lab-kind="1">
         <table class="table table-sm" id="table1061_wujuxiangjuT">
             <thead>
             <tr>
@@ -131,7 +131,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1061_2">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1061_2" data-lab-kind="2">
         <table class="table table-sm" id="table1061_zizhunzhi">
             <thead>
             <tr>
