--- a/src/main/resources/static/lab_data_forms/1091.html
+++ b/src/main/resources/static/lab_data_forms/1091.html
@@ -9,7 +9,7 @@
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
 <div class="modal-body tab-content" id="modal-body-1091-1">
-    <div role="tabpanel" class="tab-pane fade show active" id="lab_1091_1">
+    <div role="tabpanel" class="tab-pane fade show active" id="lab_1091_1" data-lab-kind="1">
         <table class="table table-sm" id="table1091_maikeerxun">
             <thead>
             <tr>
@@ -61,7 +61,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1091_2">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1091_2" data-lab-kind="2">
         <table class="table table-sm" id="table1091_niudunhuan">
             <thead>
             <tr>
@@ -124,7 +124,7 @@
             </tbody>
         </table>
     </div>
-    <div role="tabpanel" class="tab-pane fade" id="lab_1091_3">
+    <div role="tabpanel" class="tab-pane fade" id="lab_1091_3" data-lab-kind="3">
         <table class="table table-sm" id="table1091_pijian_1">
             <thead>
             <tr>
