--- a/src/main/resources/static/lab_data_forms/1021.html
+++ b/src/main/resources/static/lab_data_forms/1021.html
@@ -5,9 +5,9 @@
         <li class="nav-item" class="active">
             <a class="nav-link active" href="#lab_1021_1" aria-controls="实验一 测量冰的溶解热" role="tab" data-toggle="tab">Lab1&nbsp测量冰的溶解热</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" href="#lab_1021_2" aria-controls="实验二 焦尔法测量热功当量" role="tab" data-toggle="tab">Lab2&nbsp焦耳法测量热功当量</a>
-        </li>
+        </li> -->
     </ul>
     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
